force-app/main/default/objects/Account_Handover__c/Account_Handover__c.object-meta.xml
<CustomObject>
    <description>Custom object for storing data about the transfer of account ownership</description>
    <label>Account Handover</label>
    <nameField>
        <displayFormat>{MM}{YY}-{00}</displayFormat>
        <label>Account Handover Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Handovers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>