force-app/main/default/objects/Account_Handover__c/fields/Account_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_By__c</fullName>
    <formula>Account__r.CreatedBy.FirstName + &quot; &quot; +  Account__r.CreatedBy.LastName</formula>
    <inlineHelpText>User who created Account originally</inlineHelpText>
    <label>Account Created By</label>
    <type>Text</type>
</CustomField>