force-app/main/default/objects/Account_Handover__c/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <formula>Account__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Created Date, pulled from Account</inlineHelpText>
    <label>Account Created Date</label>
    <type>Date</type>
</CustomField>