force-app/main/default/objects/Account_Handover__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Formula to fill in the Account Record type (advertiser, affiliate)</description>
    <formula>Account__r.RecordType.DeveloperName</formula>
    <inlineHelpText>Auto-fills from Account. Not editable.</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>