force-app/main/default/objects/Account_Handover__c/fields/At_least_one_payment_received__c.field-meta.xml
<CustomField>
    <fullName>At_least_one_payment_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At least one payment received?</label>
    <type>Checkbox</type>
</CustomField>