force-app/main/default/objects/Account_Handover__c/fields/Average_Monthly_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Run_Rate__c</fullName>
    <label>Average Monthly Run Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>