force-app/main/default/objects/Account_Handover__c/fields/Communication_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Communication_Frequency__c</fullName>
    <label>Communication Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Inconsistent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>