force-app/main/default/objects/Account_Handover__c/fields/Cross_Sell_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Opportunities__c</fullName>
    <label>Cross Sell Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Additional Geos</fullName>
            </value>
            <value>
                <fullName>Additional Apps</fullName>
            </value>
            <value>
                <fullName>Additional Operating System</fullName>
            </value>
            <value>
                <fullName>Inventory - AdGem</fullName>
            </value>
            <value>
                <fullName>Inventory - OG</fullName>
            </value>
            <value>
                <fullName>Inventory - Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>