force-app/main/default/objects/Account_Handover__c/fields/Handover_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>First day that new owner holds ownership</description>
    <inlineHelpText>First day that new owner holds ownership</inlineHelpText>
    <label>Handover Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>