force-app/main/default/objects/Account_Handover__c/fields/Handover_Type__c.field-meta.xml
<CustomField>
    <fullName>Handover_Type__c</fullName>
    <label>Handover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>