force-app/main/default/objects/Account_Handover__c/fields/HO_Adv_ID_new__c.field-meta.xml
<CustomField>
    <fullName>HO_Adv_ID_new__c</fullName>
    <label>HO Adv ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>