force-app/main/default/objects/Account_Handover__c/fields/HO_Advertiser_ID__c.field-meta.xml
<CustomField>
    <fullName>HO_Advertiser_ID__c</fullName>
    <formula>Account__r.Advertiser_ID__c</formula>
    <inlineHelpText>HO Adv ID, pulled from Account</inlineHelpText>
    <label>HO Advertiser ID</label>
    <type>Text</type>
</CustomField>