force-app/main/default/objects/Account_Handover__c/fields/IO_Attached_to_Account__c.field-meta.xml
<CustomField>
    <fullName>IO_Attached_to_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IO Attached to Account?</label>
    <type>Checkbox</type>
</CustomField>