force-app/main/default/objects/Account_Handover__c/fields/Live_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Live_Campaigns__c</fullName>
    <formula>Account__r.Live_Campaigns__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live Campaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>