force-app/main/default/objects/Account_Handover__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Demand Account Owner</description>
    <label>New Demand Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>