force-app/main/default/objects/Account_Handover__c/fields/No_outstanding_tracking_issues__c.field-meta.xml
<CustomField>
    <fullName>No_outstanding_tracking_issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No outstanding tracking issues?</label>
    <type>Checkbox</type>
</CustomField>