force-app/main/default/objects/Account_Handover__c/fields/Previous_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account_Owner__c</fullName>
    <label>Previous Account Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>