force-app/main/default/objects/Account_Handover__c/fields/Previous_Owner_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_End_Date__c</fullName>
    <defaultValue>Today()-1</defaultValue>
    <description>Date that Previous Ownership ended. Defaults to day before the Effective Date of handover.</description>
    <inlineHelpText>Defaults to day before the Effective Date for new Owner</inlineHelpText>
    <label>Previous Owner End Date</label>
    <type>Date</type>
</CustomField>