force-app/main/default/objects/Account_Handover__c/validationRules/Average_Run_Rate_greater_than_1k.validationRule-meta.xml
<ValidationRule>
    <fullName>Average_Run_Rate_greater_than_1k</fullName>
    <active>true</active>
    <errorConditionFormula>Average_Monthly_Run_Rate__c &lt; 1000
&amp;&amp;
$CustomMetadata.Automation_Toggle__mdt.AutomationActive.ValidationRule__c = TRUE</errorConditionFormula>
    <errorMessage>Average Monthly Run Rate must exceed $1k</errorMessage>
</ValidationRule>