force-app/main/default/objects/Account_Handover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>New_Owner__c</columns>
    <columns>Handover_Effective_Date__c</columns>
    <columns>Account_Created_Date__c</columns>
    <columns>Account_Created_By__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HO_Advertiser_ID__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Previous_Account_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>New_Owner__c</field>
        <operation>notContain</operation>
        <value>Conor</value>
    </filters>
    <label>All</label>
</ListView>